generally load all source files

--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,9 @@
     "autoload": {
         "psr-4": {
             "JWhy\\JodelPHP\\": "src"
-        }
+        },
+		"psr-0":{
+			"src":""
+		}
     }
 }
